--- a/.config
+++ b/.config
@@ -10,7 +10,7 @@ CONFIG_TARGET_PROFILE="DEVICE_glinet_gl-mt3000"
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 
 #kmod
-#CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-tun=y
 
 #WOLFSSL
 #CONFIG_PACKAGE_wpad-basic-wolfssl=m
@@ -22,6 +22,14 @@ CONFIG_PACKAGE_wpad-basic-mbedtls=m
 CONFIG_PACKAGE_wpad-mbedtls=y
 
 #servicesandtools
+CONFIG_PACKAGE_busybox-selinux=y
+CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_bridger=y
+CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_dropbear=y
+CONFIG_PACKAGE_firewall4=y
+CONFIG_PACKAGE_fstools=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_wget=y
