--- a/.config
+++ b/.config
@@ -11,6 +11,12 @@ CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 
 #kmod
 CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-cryptohw-safexcel=y
+CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
+CONFIG_PACKAGE_kmod-leds-gpio=y
+CONFIG_PACKAGE_kmod-mt7915e=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-phy-aquantia=y
 
 #WOLFSSL
 #CONFIG_PACKAGE_wpad-basic-wolfssl=m
@@ -30,6 +36,26 @@ CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dropbear=y
 CONFIG_PACKAGE_firewall4=y
 CONFIG_PACKAGE_fstools=y
+CONFIG_PACKAGE_libc=y
+CONFIG_PACKAGE_libgcc=y
+CONFIG_PACKAGE_libustream-mbedtls=y
+CONFIG_PACKAGE_logd=y
+CONFIG_PACKAGE_mtd=y
+CONFIG_PACKAGE_netifd=y
+CONFIG_PACKAGE_nftables=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_opkg=y
+CONFIG_PACKAGE_ppp=y
+CONFIG_PACKAGE_ppp-mod-pppoe=y
+CONFIG_PACKAGE_procd=y
+CONFIG_PACKAGE_procd-seccomp=y
+CONFIG_PACKAGE_procd-ujail=y
+CONFIG_PACKAGE_uboot-envtools=y
+CONFIG_PACKAGE_uci=y
+CONFIG_PACKAGE_uclient-fetch=y
+CONFIG_PACKAGE_urandom-seed=y
+CONFIG_PACKAGE_urngd=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_wget=y
