--- a/.config
+++ b/.config
@@ -17,6 +17,12 @@ CONFIG_PACKAGE_kmod-leds-gpio=y
 CONFIG_PACKAGE_kmod-mt7915e=y
 CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-phy-aquantia=y
+CONFIG_PACKAGE_kmod-mt7981-firmware=y
+CONFIG_PACKAGE_mt7981-wo-firmware=y
+CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
+CONFIG_PACKAGE_kmod-hwmon-gpiofan=y
+CONFIG_PACKAGE_kmod-i2c-core=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
 
 #WOLFSSL
 #CONFIG_PACKAGE_wpad-basic-wolfssl=m
@@ -24,10 +30,11 @@ CONFIG_PACKAGE_kmod-phy-aquantia=y
 #CONFIG_PACKAGE_libwolfssl=n
 
 #MBEDTLS
-CONFIG_PACKAGE_wpad-basic-mbedtls=m
+#CONFIG_PACKAGE_wpad-basic-mbedtls=m
 CONFIG_PACKAGE_wpad-mbedtls=y
 
 #servicesandtools
+CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_busybox-selinux=y
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_bridger=y
@@ -56,16 +63,33 @@ CONFIG_PACKAGE_uci=y
 CONFIG_PACKAGE_uclient-fetch=y
 CONFIG_PACKAGE_urandom-seed=y
 CONFIG_PACKAGE_urngd=y
+CONFIG_PACKAGE_ip-full
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_arp-scan=y
 CONFIG_PACKAGE_bind-host=y
 CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_openssh-sftp-server=y
 
 #luci
 CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-proto-3g=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-app-openvpn=y
+CONFIG_PACKAGE_luci-app-advanced-reboot=y
+CONFIG_PACKAGE_luci-app-upnp=y
+CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+#CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-commands=y
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-openwrt=y
+CONFIG_PACKAGE_luci-theme-openwrt-2020=y
 
 #mesh-vlan
 #CONFIG_PACKAGE_kmod-gre=y
@@ -93,7 +117,7 @@ CONFIG_PACKAGE_luci-app-statistics=y
 #CONFIG_PACKAGE_luci-app-dawn=y
 
 #USB
-CONFIG_PACKAGE_luci-app-ksmbd=m
+#CONFIG_PACKAGE_luci-app-ksmbd=m
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_exfat-fsck=y
@@ -102,3 +126,10 @@ CONFIG_PACKAGE_kmod-usb-storage-uas=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_lock-mount=y
 CONFIG_PACKAGE_mount-utils=y
+
+#homeproxy
+CONFIG_PACKAGE_sing-box=y
+
+#smartdns
+CONFIG_PACKAGE_smartdns=y
+CONFIG_PACKAGE_luci-app-smartdns=y
