--- a/.config
+++ b/.config
@@ -141,6 +141,9 @@ CONFIG_DEFAULT_libgcc=y
 CONFIG_DEFAULT_libustream-openssl=y
 CONFIG_DEFAULT_logd=y
 CONFIG_DEFAULT_luci=y
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 CONFIG_DEFAULT_luci-app-opkg=y
 CONFIG_DEFAULT_luci-compat=y
 CONFIG_DEFAULT_luci-lib-base=y
@@ -167,6 +170,7 @@ CONFIG_DEFAULT_luci-app-ttyd=y
 CONFIG_DEFAULT_luci-app-firewall=y
 CONFIG_DEFAULT_luci-app-smartdns=y
 CONFIG_DEFAULT_luci-app-vssr=y
+CONFIG_DEFAULT_luci-app-openclash=y
 CONFIG_DEFAULT_sing-box=y
 CONFIG_DEFAULT_kmod-hwmon-gpiofan=y
 CONFIG_DEFAULT_kmod-i2c-core=y
