--- a/.config
+++ b/.config
@@ -134,5 +134,5 @@ CONFIG_PACKAGE_sing-box=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 
-CONFIG_PACKAGE_luci-app-ssr=y
+#CONFIG_PACKAGE_luci-app-ssr=y
 #CONFIG_PACKAGE_luci-app-openclash=y
