--- a/.config
+++ b/.config
@@ -9,75 +9,63 @@ CONFIG_TARGET_ALL_PROFILES=n
 CONFIG_TARGET_PROFILE="DEVICE_glinet_gl-mt3000"
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 
-#kmod
-CONFIG_PACKAGE_kmod-tun=y
-CONFIG_PACKAGE_kmod-crypto-hw-safexcel=y
-CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
-CONFIG_PACKAGE_kmod-leds-gpio=y
-CONFIG_PACKAGE_kmod-mt7915e=y
-CONFIG_PACKAGE_kmod-nft-offload=y
-CONFIG_PACKAGE_kmod-phy-aquantia=y
-CONFIG_PACKAGE_kmod-mt7981-firmware=y
-CONFIG_PACKAGE_mt7981-wo-firmware=y
-CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
-CONFIG_PACKAGE_kmod-hwmon-gpiofan=y
-CONFIG_PACKAGE_kmod-i2c-core=y
-CONFIG_PACKAGE_kmod-nft-tproxy=y
+#官方
+#CONFIG_PACKAGE_base-files=y
+#CONFIG_PACKAGE_busybox-selinux=y
+#CONFIG_PACKAGE_ca-bundle=y
+#CONFIG_PACKAGE_dnsmasq-full=y
+#CONFIG_PACKAGE_dropbear=y
+#CONFIG_PACKAGE_firewall4=y
+#CONFIG_PACKAGE_fitblk=y
+#CONFIG_PACKAGE_fstools=y
+#CONFIG_PACKAGE_kmod-crypto-hw-safexcel=y
+#CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
+#CONFIG_PACKAGE_kmod-leds-gpio=y
+#CONFIG_PACKAGE_kmod-nft-offload=y
+#CONFIG_PACKAGE_kmod-phy-aquantia=y
+#CONFIG_PACKAGE_libc=y
+#CONFIG_PACKAGE_libgcc=y
+#CONFIG_PACKAGE_libustream-mbedtls=y
+#CONFIG_PACKAGE_logd=y
+#CONFIG_PACKAGE_mtd=y
+#CONFIG_PACKAGE_netifd=y
+#CONFIG_PACKAGE_nftables=y
+#CONFIG_PACKAGE_odhcp6c=y
+#CONFIG_PACKAGE_odhcpd-ipv6only=y
+#CONFIG_PACKAGE_opkg=y
+#CONFIG_PACKAGE_ppp=y
+#CONFIG_PACKAGE_ppp-mod-pppoe=y
+#CONFIG_PACKAGE_procd-ujail=y
+#CONFIG_PACKAGE_uboot-envtools=y
+#CONFIG_PACKAGE_uci=y
+#CONFIG_PACKAGE_uclient-fetch=y
+#CONFIG_PACKAGE_urandom-seed=y
+#CONFIG_PACKAGE_urngd=y
+#CONFIG_PACKAGE_kmod-mt7915e=y
+#CONFIG_PACKAGE_kmod-mt7981-firmware=y
+#CONFIG_PACKAGE_mt7981-wo-firmware=y
+#CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
+#CONFIG_PACKAGE_kmod-usb3=y
+#CONFIG_PACKAGE_luci=y
 
-#WOLFSSL
-#CONFIG_PACKAGE_wpad-basic-wolfssl=m
-#CONFIG_PACKAGE_wpad-wolfssl=y
-#CONFIG_PACKAGE_libwolfssl=n
-
-#MBEDTLS
-#CONFIG_PACKAGE_wpad-basic-mbedtls=m
+#自定义
+CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_wpad-mbedtls=y
-
-#servicesandtools
-CONFIG_PACKAGE_base-files=y
-CONFIG_PACKAGE_busybox-selinux=y
-CONFIG_PACKAGE_block-mount=y
-CONFIG_PACKAGE_bridger=y
-CONFIG_PACKAGE_ca-bundle=y
-CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_dropbear=y
-CONFIG_PACKAGE_firewall4=y
-CONFIG_PACKAGE_fstools=y
-CONFIG_PACKAGE_libc=y
-CONFIG_PACKAGE_libgcc=y
-CONFIG_PACKAGE_libustream-mbedtls=y
-CONFIG_PACKAGE_logd=y
-CONFIG_PACKAGE_mtd=y
-CONFIG_PACKAGE_netifd=y
-CONFIG_PACKAGE_nftables=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_opkg=y
-CONFIG_PACKAGE_ppp=y
-CONFIG_PACKAGE_ppp-mod-pppoe=y
-CONFIG_PACKAGE_procd=y
-CONFIG_PACKAGE_procd-seccomp=y
-CONFIG_PACKAGE_procd-ujail=y
-CONFIG_PACKAGE_uboot-envtools=y
-CONFIG_PACKAGE_uci=y
-CONFIG_PACKAGE_uclient-fetch=y
-CONFIG_PACKAGE_urandom-seed=y
-CONFIG_PACKAGE_urngd=y
-CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_arp-scan=y
 CONFIG_PACKAGE_bind-host=y
 CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_openssh-sftp-server=y
+CONFIG_PACKAGE_sing-box=y
 
 #luci
 CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
-CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-proto-3g=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-app-openvpn=y
@@ -85,39 +73,23 @@ CONFIG_PACKAGE_luci-app-advanced-reboot=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-uhttpd=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-#CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-commands=y
+CONFIG_PACKAGE_luci-app-filemanager=y
+CONFIG_PACKAGE_luci-app-package-manager=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-theme-openwrt=y
-CONFIG_PACKAGE_luci-theme-openwrt-2020=y
-
-#mesh-vlan
-#CONFIG_PACKAGE_kmod-gre=y
-#CONFIG_PACKAGE_luci-proto-gre=y
+CONFIG_PACKAGE_luci-theme-openwrt-2020 =y
 
 #mesh-batman
 CONFIG_PACKAGE_luci-proto-batman-adv=y
 CONFIG_PACKAGE_kmod-batman-adv=y
 
-#qos
-CONFIG_PACKAGE_sqm-scripts=y
-CONFIG_PACKAGE_luci-app-sqm=y
-
-
 #Sonstiges
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-app-statistics=y
 
-#Spam
-#CONFIG_PACKAGE_adblock=y
-#CONFIG_PACKAGE_luci-app-adblock=y
-
-#wlantest
-#CONFIG_PACKAGE_dawn=y
-#CONFIG_PACKAGE_luci-app-dawn=y
-
 #USB
-#CONFIG_PACKAGE_luci-app-ksmbd=m
+CONFIG_PACKAGE_luci-app-ksmbd=m
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_exfat-fsck=y
@@ -127,12 +99,10 @@ CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_lock-mount=y
 CONFIG_PACKAGE_mount-utils=y
 
-#homeproxy
-CONFIG_PACKAGE_sing-box=y
-
-#smartdns
-CONFIG_PACKAGE_smartdns=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-
-#CONFIG_PACKAGE_luci-app-ssr=y
-#CONFIG_PACKAGE_luci-app-openclash=y
+# docker
+#CONFIG_PACKAGE_dockerd=y
+#CONFIG_PACKAGE_docker-compose=y
+#CONFIG_PACKAGE_luci-app-dockerman=y
+#CONFIG_PACKAGE_kmod-veth=y
+#CONFIG_PACKAGE_uxc=y
+#CONFIG_PACKAGE_procd-ujail-console=y
