--- a/.config
+++ b/.config
@@ -10,43 +10,43 @@ CONFIG_TARGET_PROFILE="DEVICE_glinet_gl-mt3000"
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 
 #官方
-CONFIG_PACKAGE_base-files=y
+#CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_busybox-selinux=y
-CONFIG_PACKAGE_ca-bundle=y
+#CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_dropbear=y
-CONFIG_PACKAGE_firewall4=y
-CONFIG_PACKAGE_fitblk=y
-CONFIG_PACKAGE_fstools=y
-CONFIG_PACKAGE_kmod-crypto-hw-safexcel=y
-CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
-CONFIG_PACKAGE_kmod-leds-gpio=y
-CONFIG_PACKAGE_kmod-nft-offload=y
-CONFIG_PACKAGE_kmod-phy-aquantia=y
-CONFIG_PACKAGE_libc=y
-CONFIG_PACKAGE_libgcc=y
-CONFIG_PACKAGE_libustream-mbedtls=y
-CONFIG_PACKAGE_logd=y
-CONFIG_PACKAGE_mtd=y
-CONFIG_PACKAGE_netifd=y
-CONFIG_PACKAGE_nftables=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_opkg=y
-CONFIG_PACKAGE_ppp=y
-CONFIG_PACKAGE_ppp-mod-pppoe=y
-CONFIG_PACKAGE_procd-ujail=y
-CONFIG_PACKAGE_uboot-envtools=y
-CONFIG_PACKAGE_uci=y
-CONFIG_PACKAGE_uclient-fetch=y
-CONFIG_PACKAGE_urandom-seed=y
-CONFIG_PACKAGE_urngd=y
-CONFIG_PACKAGE_kmod-mt7915e=y
-CONFIG_PACKAGE_kmod-mt7981-firmware=y
-CONFIG_PACKAGE_mt7981-wo-firmware=y
-CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
-CONFIG_PACKAGE_kmod-usb3=y
-CONFIG_PACKAGE_luci=y
+#CONFIG_PACKAGE_dropbear=y
+#CONFIG_PACKAGE_firewall4=y
+#CONFIG_PACKAGE_fitblk=y
+#CONFIG_PACKAGE_fstools=y
+#CONFIG_PACKAGE_kmod-crypto-hw-safexcel=y
+#CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
+#CONFIG_PACKAGE_kmod-leds-gpio=y
+#CONFIG_PACKAGE_kmod-nft-offload=y
+#CONFIG_PACKAGE_kmod-phy-aquantia=y
+#CONFIG_PACKAGE_libc=y
+#CONFIG_PACKAGE_libgcc=y
+#CONFIG_PACKAGE_libustream-mbedtls=y
+#CONFIG_PACKAGE_logd=y
+#CONFIG_PACKAGE_mtd=y
+#CONFIG_PACKAGE_netifd=y
+#CONFIG_PACKAGE_nftables=y
+#CONFIG_PACKAGE_odhcp6c=y
+#CONFIG_PACKAGE_odhcpd-ipv6only=y
+#CONFIG_PACKAGE_opkg=y
+#CONFIG_PACKAGE_ppp=y
+#CONFIG_PACKAGE_ppp-mod-pppoe=y
+#CONFIG_PACKAGE_procd-ujail=y
+#CONFIG_PACKAGE_uboot-envtools=y
+#CONFIG_PACKAGE_uci=y
+#CONFIG_PACKAGE_uclient-fetch=y
+#CONFIG_PACKAGE_urandom-seed=y
+#CONFIG_PACKAGE_urngd=y
+#CONFIG_PACKAGE_kmod-mt7915e=y
+#CONFIG_PACKAGE_kmod-mt7981-firmware=y
+#CONFIG_PACKAGE_mt7981-wo-firmware=y
+#CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
+#CONFIG_PACKAGE_kmod-usb3=y
+#CONFIG_PACKAGE_luci=y
 
 #自定义
 CONFIG_PACKAGE_wget=y
@@ -58,14 +58,23 @@ CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_arp-scan=y
 CONFIG_PACKAGE_bind-host=y
 CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_sing-box=y
+CONFIG_PACKAGE_openssh-sftp-server=y
+CONFIG_PACKAGE_resolveip=y
+CONFIG_PACKAGE_swconfig=y
+CONFIG_PACKAGE_zram-swap=y
+CONFIG_PACKAGE_librt=y
+CONFIG_PACKAGE_libpthread=y
+
+#kmod
+CONFIG_PACKAGE_kmod-hwmon-gpiofan=y
+CONFIG_PACKAGE_kmod-i2c-core=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
 
 #luci
-CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-compat=y
-CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-base-zh-tw=y
+CONFIG_PACKAGE_luci-i18n-opkg-zh-tw=y
+CONFIG_PACKAGE_luci-i18n-firewall-zh-tw=y
 CONFIG_PACKAGE_luci-proto-3g=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-app-openvpn=y
@@ -79,6 +88,29 @@ CONFIG_PACKAGE_luci-app-package-manager=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-theme-openwrt=y
 CONFIG_PACKAGE_luci-theme-openwrt-2020 =y
+CONFIG_PACKAGE_luci-app-v2raya=y
+CONFIG_PACKAGE_luci-i18n-v2raya-zh-tw=y
+CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-i18n-smartdns-zh-tw=y
+CONFIG_PACKAGE_luci-app-statistics=y
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-app-crowdsec-firewall-bouncer=y
+CONFIG_PACKAGE_luci-app-antiblock=y
+CONFIG_PACKAGE_luci-app-privoxy=y
+CONFIG_PACKAGE_luci-app-squid=y
+
+# v2raya
+CONFIG_PACKAGE_v2raya=y
+CONFIG_PACKAGE_xray-core=y
+CONFIG_PACKAGE_v2ray-geoip=y
+CONFIG_PACKAGE_v2ray-geosite=y
+CONFIG_PACKAGE_v2raya=y
+CONFIG_PACKAGE_v2ray-geoip=y
+CONFIG_PACKAGE_v2ray-geosite=y
+CONFIG_PACKAGE_v2ray-core=y
+CONFIG_PACKAGE_v2ray-geosite-ir=y
+CONFIG_PACKAGE_v2ray-extra=y
+CONFIG_PACKAGE_v2ray-example=y
 
 #mesh-batman
 CONFIG_PACKAGE_luci-proto-batman-adv=y
@@ -89,7 +121,7 @@ CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-app-statistics=y
 
 #USB
-CONFIG_PACKAGE_luci-app-ksmbd=m
+# CONFIG_PACKAGE_luci-app-ksmbd=m
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_exfat-fsck=y
@@ -100,9 +132,13 @@ CONFIG_PACKAGE_lock-mount=y
 CONFIG_PACKAGE_mount-utils=y
 
 # docker
-#CONFIG_PACKAGE_dockerd=y
-#CONFIG_PACKAGE_docker-compose=y
-#CONFIG_PACKAGE_luci-app-dockerman=y
-#CONFIG_PACKAGE_kmod-veth=y
-#CONFIG_PACKAGE_uxc=y
-#CONFIG_PACKAGE_procd-ujail-console=y
+CONFIG_PACKAGE_dockerd=y
+CONFIG_PACKAGE_docker-compose=y
+CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_kmod-veth=y
+CONFIG_PACKAGE_uxc=y
+CONFIG_PACKAGE_procd-ujail-console=y
+
+#sing-box
+CONFIG_PACKAGE_sing-box=y
+CONFIG_PACKAGE_smartdns=y
