--- a/.config
+++ b/.config
@@ -10,48 +10,47 @@ CONFIG_TARGET_PROFILE="DEVICE_glinet_gl-mt3000"
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 
 #官方
-#CONFIG_PACKAGE_base-files=y
+CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_busybox-selinux=y
-#CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_dnsmasq-full=y
-#CONFIG_PACKAGE_dropbear=y
-#CONFIG_PACKAGE_firewall4=y
-#CONFIG_PACKAGE_fitblk=y
-#CONFIG_PACKAGE_fstools=y
-#CONFIG_PACKAGE_kmod-crypto-hw-safexcel=y
-#CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
-#CONFIG_PACKAGE_kmod-leds-gpio=y
-#CONFIG_PACKAGE_kmod-nft-offload=y
-#CONFIG_PACKAGE_kmod-phy-aquantia=y
-#CONFIG_PACKAGE_libc=y
-#CONFIG_PACKAGE_libgcc=y
-#CONFIG_PACKAGE_libustream-mbedtls=y
-#CONFIG_PACKAGE_logd=y
-#CONFIG_PACKAGE_mtd=y
-#CONFIG_PACKAGE_netifd=y
-#CONFIG_PACKAGE_nftables=y
-#CONFIG_PACKAGE_odhcp6c=y
-#CONFIG_PACKAGE_odhcpd-ipv6only=y
-#CONFIG_PACKAGE_opkg=y
-#CONFIG_PACKAGE_ppp=y
-#CONFIG_PACKAGE_ppp-mod-pppoe=y
-#CONFIG_PACKAGE_procd-ujail=y
-#CONFIG_PACKAGE_uboot-envtools=y
-#CONFIG_PACKAGE_uci=y
-#CONFIG_PACKAGE_uclient-fetch=y
-#CONFIG_PACKAGE_urandom-seed=y
-#CONFIG_PACKAGE_urngd=y
-#CONFIG_PACKAGE_kmod-mt7915e=y
-#CONFIG_PACKAGE_kmod-mt7981-firmware=y
-#CONFIG_PACKAGE_mt7981-wo-firmware=y
-#CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
-#CONFIG_PACKAGE_kmod-usb3=y
-#CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_dropbear=y
+CONFIG_PACKAGE_firewall4=y
+CONFIG_PACKAGE_fitblk=y
+CONFIG_PACKAGE_fstools=y
+CONFIG_PACKAGE_kmod-crypto-hw-safexcel=y
+CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
+CONFIG_PACKAGE_kmod-leds-gpio=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-phy-aquantia=y
+CONFIG_PACKAGE_libc=y
+CONFIG_PACKAGE_libgcc=y
+CONFIG_PACKAGE_libustream-mbedtls=y
+CONFIG_PACKAGE_logd=y
+CONFIG_PACKAGE_mtd=y
+CONFIG_PACKAGE_netifd=y
+CONFIG_PACKAGE_nftables=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_opkg=y
+CONFIG_PACKAGE_ppp=y
+CONFIG_PACKAGE_ppp-mod-pppoe=y
+CONFIG_PACKAGE_procd-ujail=y
+CONFIG_PACKAGE_uboot-envtools=y
+CONFIG_PACKAGE_uci=y
+CONFIG_PACKAGE_uclient-fetch=y
+CONFIG_PACKAGE_urandom-seed=y
+CONFIG_PACKAGE_urngd=y
+CONFIG_PACKAGE_kmod-mt7915e=y
+CONFIG_PACKAGE_kmod-mt7981-firmware=y
+CONFIG_PACKAGE_mt7981-wo-firmware=y
+CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
+CONFIG_PACKAGE_kmod-usb3=y
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_wpad-mbedtls=y
 
 #自定义
-CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_wpad-mbedtls=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_wget=y
@@ -64,6 +63,9 @@ CONFIG_PACKAGE_swconfig=y
 CONFIG_PACKAGE_zram-swap=y
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libpthread=y
+CONFIG_PACKAGE_nano=y
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_script-utils=y
 
 #kmod
 CONFIG_PACKAGE_kmod-hwmon-gpiofan=y
