--- a/.config
+++ b/.config
@@ -66,6 +66,8 @@ CONFIG_PACKAGE_libpthread=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_script-utils=y
+CONFIG_PACKAGE_sing-box=y
+CONFIG_PACKAGE_smartdns=y
 
 #kmod
 CONFIG_PACKAGE_kmod-hwmon-gpiofan=y
@@ -102,17 +104,17 @@ CONFIG_PACKAGE_luci-app-privoxy=y
 CONFIG_PACKAGE_luci-app-squid=y
 
 # v2raya
-CONFIG_PACKAGE_v2raya=y
-CONFIG_PACKAGE_xray-core=y
-CONFIG_PACKAGE_v2ray-geoip=y
-CONFIG_PACKAGE_v2ray-geosite=y
-CONFIG_PACKAGE_v2raya=y
-CONFIG_PACKAGE_v2ray-geoip=y
-CONFIG_PACKAGE_v2ray-geosite=y
-CONFIG_PACKAGE_v2ray-core=y
-CONFIG_PACKAGE_v2ray-geosite-ir=y
-CONFIG_PACKAGE_v2ray-extra=y
-CONFIG_PACKAGE_v2ray-example=y
+#CONFIG_PACKAGE_v2raya=y
+#CONFIG_PACKAGE_xray-core=y
+#CONFIG_PACKAGE_v2ray-geoip=y
+#CONFIG_PACKAGE_v2ray-geosite=y
+#CONFIG_PACKAGE_v2raya=y
+#CONFIG_PACKAGE_v2ray-geoip=y
+#CONFIG_PACKAGE_v2ray-geosite=y
+#CONFIG_PACKAGE_v2ray-core=y
+#CONFIG_PACKAGE_v2ray-geosite-ir=y
+#CONFIG_PACKAGE_v2ray-extra=y
+#CONFIG_PACKAGE_v2ray-example=y
 
 #mesh-batman
 CONFIG_PACKAGE_luci-proto-batman-adv=y
@@ -141,6 +143,3 @@ CONFIG_PACKAGE_kmod-veth=y
 CONFIG_PACKAGE_uxc=y
 CONFIG_PACKAGE_procd-ujail-console=y
 
-#sing-box
-CONFIG_PACKAGE_sing-box=y
-CONFIG_PACKAGE_smartdns=y
