--- a/.config
+++ b/.config
@@ -104,17 +104,17 @@ CONFIG_PACKAGE_luci-app-privoxy=y
 CONFIG_PACKAGE_luci-app-squid=y
 
 # v2raya
-#CONFIG_PACKAGE_v2raya=y
-#CONFIG_PACKAGE_xray-core=y
-#CONFIG_PACKAGE_v2ray-geoip=y
-#CONFIG_PACKAGE_v2ray-geosite=y
-#CONFIG_PACKAGE_v2raya=y
-#CONFIG_PACKAGE_v2ray-geoip=y
-#CONFIG_PACKAGE_v2ray-geosite=y
-#CONFIG_PACKAGE_v2ray-core=y
-#CONFIG_PACKAGE_v2ray-geosite-ir=y
-#CONFIG_PACKAGE_v2ray-extra=y
-#CONFIG_PACKAGE_v2ray-example=y
+CONFIG_PACKAGE_v2raya=y
+CONFIG_PACKAGE_xray-core=y
+CONFIG_PACKAGE_v2ray-geoip=y
+CONFIG_PACKAGE_v2ray-geosite=y
+CONFIG_PACKAGE_v2raya=y
+CONFIG_PACKAGE_v2ray-geoip=y
+CONFIG_PACKAGE_v2ray-geosite=y
+CONFIG_PACKAGE_v2ray-core=y
+CONFIG_PACKAGE_v2ray-geosite-ir=y
+CONFIG_PACKAGE_v2ray-extra=y
+CONFIG_PACKAGE_v2ray-example=y
 
 #mesh-batman
 CONFIG_PACKAGE_luci-proto-batman-adv=y
@@ -129,17 +129,17 @@ CONFIG_PACKAGE_luci-app-statistics=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_exfat-fsck=y
-CONFIG_DEFAULT_kmod-usb3=y
+# CONFIG_DEFAULT_kmod-usb3=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_lock-mount=y
 CONFIG_PACKAGE_mount-utils=y
 
 # docker
-CONFIG_PACKAGE_dockerd=y
-CONFIG_PACKAGE_docker-compose=y
-CONFIG_PACKAGE_luci-app-dockerman=y
-CONFIG_PACKAGE_kmod-veth=y
-CONFIG_PACKAGE_uxc=y
-CONFIG_PACKAGE_procd-ujail-console=y
+#CONFIG_PACKAGE_dockerd=y
+#CONFIG_PACKAGE_docker-compose=y
+#CONFIG_PACKAGE_luci-app-dockerman=y
+#CONFIG_PACKAGE_kmod-veth=y
+#CONFIG_PACKAGE_uxc=y
+#CONFIG_PACKAGE_procd-ujail-console=y
 
