--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -13,20 +13,30 @@ on:
   repository_dispatch:
   workflow_dispatch:
   
-  push:
-    branches: 
-      - master
-  schedule:
-    - cron: 0 0 1 * *
-  watch:
-    types: started
+  #push:
+  #  branches: 
+  #    - master
+  #schedule:
+  #  - cron: 0 0 1 * *
+  #watch:
+  #  types: started
+#env:
+#  REPO_URL: https://github.com/openwrt/openwrt.git
+#  REPO_BRANCH: master
+#  OpenWRTDevice: Beryl_gl-mt3000
+#  CONFIG_FILE: .config
+#  TZ: Europe/Berlin
 env:
   REPO_URL: https://github.com/openwrt/openwrt.git
   REPO_BRANCH: master
-  OpenWRTDevice: Beryl_gl-mt3000
+  FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
-  TZ: Europe/Berlin
-
+  #DIY_P1_SH: diy-part1.sh
+  #DIY_P2_SH: diy-part2.sh
+  UPLOAD_BIN_DIR: false
+  UPLOAD_FIRMWARE: true
+  UPLOAD_RELEASE: true
+  TZ: Asia/Shanghai
 
 jobs:
   build:
@@ -56,10 +66,17 @@ jobs:
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-      - name: Costom configure file
+      #- name: Costom configure file
+      #  run: |
+      #    make defconfig
+      - name: Load custom configuration
         run: |
-          make defconfig
-      - name: Download package source code
+          [ -e files ] && mv files openwrt/files
+          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+          cd openwrt
+          
+      #- name: Download package source code
+      - name: Download package
         run: |
           make download -j8
           find dl -size -1024c -exec ls -l {} \;
