--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -74,7 +74,7 @@ jobs:
           [ -e files ] && mv files openwrt/files
           [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
           cd openwrt
-          
+          make defconfig
       #- name: Download package source code
       - name: Download package source code
         run: |
