--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -71,9 +71,6 @@ jobs:
       #    make defconfig
       - name: Load custom configuration
         run: |
-          [ -e files ] && mv files openwrt/files
-          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-          cd openwrt
           make defconfig
       #- name: Download package source code
       - name: Download package source code
@@ -84,7 +81,8 @@ jobs:
       - name: Compile firmware
         run: |
           echo -e "$(nproc) thread build."
-          make -j$(nproc) V=s
+          #make -j$(nproc) V=s
+          make -j$(nproc) || make -j1 || make -j1 V=s
       - name : Upload artifact
         uses: actions/upload-artifact@master
         with:
