--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -27,7 +27,7 @@ on:
 #  CONFIG_FILE: .config
 #  TZ: Europe/Berlin
 env:
-  REPO_URL: https://github.com/openwrt/openwrt.git
+  REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
@@ -57,8 +57,8 @@ jobs:
           sudo -E apt-get clean
       - name: Download openwrt
         run: |
-          git clone https://github.com/openwrt/openwrt.git
-          # https://github.com/coolsnowwolf/lede
+          # git clone https://github.com/openwrt/openwrt.git
+          git clone https://github.com/coolsnowwolf/lede
           cp .config ./openwrt/.config
           mv ./openwrt/* ./
      
@@ -66,10 +66,7 @@ jobs:
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-      #- name: Costom configure file
-      #  run: |
-      #    make defconfig
-      - name: Load custom configuration
+      - name: Costom configure file
         run: |
           make defconfig
       - name: Download package source code
@@ -80,8 +77,7 @@ jobs:
       - name: Compile firmware
         run: |
           echo -e "$(nproc) thread build."
-          #make -j$(nproc) V=s
-          make -j$(nproc) || make -j1 || make -j1 V=s
+          make -j$(nproc) V=s
       - name : Upload artifact
         uses: actions/upload-artifact@master
         with:
