--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -12,31 +12,14 @@ name: OpenWrt
 on:
   repository_dispatch:
   workflow_dispatch:
-  
-  #push:
-  #  branches: 
-  #    - master
-  #schedule:
-  #  - cron: 0 0 1 * *
-  #watch:
-  #  types: started
-#env:
-#  REPO_URL: https://github.com/openwrt/openwrt.git
-#  REPO_BRANCH: master
-#  OpenWRTDevice: Beryl_gl-mt3000
-#  CONFIG_FILE: .config
-#  TZ: Europe/Berlin
-env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
-  #DIY_P1_SH: diy-part1.sh
-  #DIY_P2_SH: diy-part2.sh
-  UPLOAD_BIN_DIR: false
-  UPLOAD_FIRMWARE: true
-  UPLOAD_RELEASE: true
-  TZ: Asia/Shanghai
+on:
+  push:
+    branches: 
+      - master
+  schedule:
+    - cron: 0 0 1 * *
+  watch:
+    types: started
 
 jobs:
   build:
@@ -55,13 +38,27 @@ jobs:
           sudo -E apt-get -yqq install build-essential asciidoc binutils bzip2 lib32gcc-s1 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
-      - name: Download openwrt
+      - name: Download lede
         run: |
-          # git clone https://github.com/openwrt/openwrt.git
           git clone https://github.com/coolsnowwolf/lede
-          cp .config ./openwrt/.config
-          mv ./openwrt/* ./
-     
+          cp .config ./lede/.config
+          mv ./lede/* ./
+      - name: Install Helloword
+        run: |
+          echo "src-git helloworld https://github.com/fw876/helloworld" >> ./feeds.conf.default 
+      - name: Install OpenClash
+        run: |
+          mkdir package/luci-app-openclash
+          cd package/luci-app-openclash
+          git init
+          git remote add -f origin https://github.com/vernesong/OpenClash.git
+          git config core.sparsecheckout true
+          echo "luci-app-openclash" >> .git/info/sparse-checkout
+          git pull --depth 1 origin master
+          git branch --set-upstream-to=origin/master master
+          pushd luci-app-openclash/tools/po2lmo
+          make && sudo make install
+          popd
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
@@ -83,3 +80,4 @@ jobs:
         with:
           name: OpenWrt_firmware
           path: bin/targets/
+          
