--- a/.config
+++ b/.config
@@ -21,6 +21,9 @@ CONFIG_CPU_TYPE="cortex-a53"
 CONFIG_LINUX_5_15=y
 CONFIG_DEFAULT_autocore-arm=y
 
+CONFIG_PACKAGE_apparmor-utils=y
+CONFIG_PACKAGE_apparmor-profiles=y
+
 #官方
 CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_busybox-selinux=y
@@ -79,7 +82,7 @@ CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_script-utils=y
 CONFIG_PACKAGE_sing-box=y
-CONFIG_PACKAGE_smartdns=y
+#CONFIG_PACKAGE_smartdns=y
 
 #kmod
 CONFIG_PACKAGE_kmod-hwmon-gpiofan=y
@@ -110,23 +113,23 @@ CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-tw=y
 CONFIG_PACKAGE_luci-app-statistics=y
 CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-app-crowdsec-firewall-bouncer=y
-CONFIG_PACKAGE_luci-app-antiblock=y
-CONFIG_PACKAGE_luci-app-privoxy=y
-CONFIG_PACKAGE_luci-app-squid=y
+#CONFIG_PACKAGE_luci-app-crowdsec-firewall-bouncer=y
+#CONFIG_PACKAGE_luci-app-antiblock=y
+#CONFIG_PACKAGE_luci-app-privoxy=y
+#CONFIG_PACKAGE_luci-app-squid=y
 
 # v2raya
-CONFIG_PACKAGE_v2raya=y
-CONFIG_PACKAGE_xray-core=y
-CONFIG_PACKAGE_v2ray-geoip=y
-CONFIG_PACKAGE_v2ray-geosite=y
-CONFIG_PACKAGE_v2raya=y
-CONFIG_PACKAGE_v2ray-geoip=y
-CONFIG_PACKAGE_v2ray-geosite=y
-CONFIG_PACKAGE_v2ray-core=y
-CONFIG_PACKAGE_v2ray-geosite-ir=y
-CONFIG_PACKAGE_v2ray-extra=y
-CONFIG_PACKAGE_v2ray-example=y
+#CONFIG_PACKAGE_v2raya=y
+#CONFIG_PACKAGE_xray-core=y
+#CONFIG_PACKAGE_v2ray-geoip=y
+#CONFIG_PACKAGE_v2ray-geosite=y
+#CONFIG_PACKAGE_v2raya=y
+#CONFIG_PACKAGE_v2ray-geoip=y
+#CONFIG_PACKAGE_v2ray-geosite=y
+#CONFIG_PACKAGE_v2ray-core=y
+#CONFIG_PACKAGE_v2ray-geosite-ir=y
+#CONFIG_PACKAGE_v2ray-extra=y
+#CONFIG_PACKAGE_v2ray-example=y
 
 #mesh-batman
 CONFIG_PACKAGE_luci-proto-batman-adv=y
