--- a/.config
+++ b/.config
@@ -21,8 +21,8 @@ CONFIG_CPU_TYPE="cortex-a53"
 CONFIG_LINUX_5_15=y
 CONFIG_DEFAULT_autocore-arm=y
 
-CONFIG_PACKAGE_apparmor-utils=y
-CONFIG_PACKAGE_apparmor-profiles=y
+# SELinux
+CONFIG_PACKAGE_selinux-policy=y
 
 #官方
 CONFIG_PACKAGE_base-files=y
