--- a/.config
+++ b/.config
@@ -1,4 +1,27 @@
 #Gli MT3000
+#CONFIG_TARGET_mediatek=y
+#CONFIG_TARGET_mediatek_filogic=y
+#CONFIG_TARGET_mediatek_filogic_DEVICE_glinet_gl-mt3000=y
+#CONFIG_TARGET_PACKAGES_mediatek_filogic_DEVICE_glinet_gl-mt3000=y
+#CONFIG_TARGET_PROFILE="DEVICE_glinet_gl-mt3000"
+#CONFIG_TARGET_MULTI_PROFILE=n
+#CONFIG_TARGET_ALL_PROFILES=n
+#CONFIG_TARGET_PROFILE="DEVICE_glinet_gl-mt3000"
+#CONFIG_TARGET_PER_DEVICE_ROOTFS=y
+#CONFIG_MODULES=y
+#CONFIG_HAVE_DOT_CONFIG=y
+#CONFIG_HOST_OS_LINUX=y
+#CONFIG_HAS_SUBTARGETS=y
+#CONFIG_HAS_DEVICES=y
+#CONFIG_TARGET_BOARD="mediatek"
+#CONFIG_TARGET_SUBTARGET="filogic"
+#CONFIG_TARGET_ARCH_PACKAGES="aarch64_cortex-a53"
+#CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"
+#CONFIG_CPU_TYPE="cortex-a53"
+#CONFIG_LINUX_5_15=y
+#CONFIG_DEFAULT_autocore-arm=y
+
+#Gli MT3000
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
 CONFIG_TARGET_mediatek_filogic_DEVICE_glinet_gl-mt3000=y
@@ -8,18 +31,6 @@ CONFIG_TARGET_MULTI_PROFILE=n
 CONFIG_TARGET_ALL_PROFILES=n
 CONFIG_TARGET_PROFILE="DEVICE_glinet_gl-mt3000"
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
-CONFIG_MODULES=y
-CONFIG_HAVE_DOT_CONFIG=y
-CONFIG_HOST_OS_LINUX=y
-CONFIG_HAS_SUBTARGETS=y
-CONFIG_HAS_DEVICES=y
-CONFIG_TARGET_BOARD="mediatek"
-CONFIG_TARGET_SUBTARGET="filogic"
-CONFIG_TARGET_ARCH_PACKAGES="aarch64_cortex-a53"
-CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"
-CONFIG_CPU_TYPE="cortex-a53"
-CONFIG_LINUX_5_15=y
-CONFIG_DEFAULT_autocore-arm=y
 
 # SELinux
 CONFIG_PACKAGE_selinux-policy=y
