--- a/.config
+++ b/.config
@@ -118,10 +118,10 @@ CONFIG_PACKAGE_luci-app-package-manager=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-theme-openwrt=y
 CONFIG_PACKAGE_luci-theme-openwrt-2020 =y
-CONFIG_PACKAGE_luci-app-v2raya=y
-CONFIG_PACKAGE_luci-i18n-v2raya-zh-tw=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-tw=y
+#CONFIG_PACKAGE_luci-app-v2raya=y
+#CONFIG_PACKAGE_luci-i18n-v2raya-zh-tw=y
+#CONFIG_PACKAGE_luci-app-smartdns=y
+#CONFIG_PACKAGE_luci-i18n-smartdns-zh-tw=y
 CONFIG_PACKAGE_luci-app-statistics=y
 CONFIG_PACKAGE_luci-app-samba4=y
 #CONFIG_PACKAGE_luci-app-crowdsec-firewall-bouncer=y
