--- a/.config
+++ b/.config
@@ -33,7 +33,7 @@
 #CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 
 # SELinux
-CONFIG_PACKAGE_selinux-policy=y
+#CONFIG_PACKAGE_selinux-policy=y
 
 #官方
 #CONFIG_PACKAGE_base-files=y
@@ -89,9 +89,9 @@ CONFIG_PACKAGE_selinux-policy=y
 #CONFIG_PACKAGE_zram-swap=y
 #CONFIG_PACKAGE_librt=y
 #CONFIG_PACKAGE_libpthread=y
-CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_fdisk=y
-CONFIG_PACKAGE_script-utils=y
+#CONFIG_PACKAGE_nano=y
+#CONFIG_PACKAGE_fdisk=y
+#CONFIG_PACKAGE_script-utils=y
 #CONFIG_PACKAGE_sing-box=y
 #CONFIG_PACKAGE_smartdns=y
 
